Fixed jumping occurring on piechart hint path and sine wave corners

--- a/d3 Prototyping/CSS/heatmapStyles.css
+++ b/d3 Prototyping/CSS/heatmapStyles.css
@@ -73,7 +73,7 @@ body {
 /*The anchor along the interaction path */
 #anchor{
     fill: none;
-    stroke:#c7c7c7;
+    stroke:#000;
 }
 
 
